Added containers for entrypoints to the RDF querries.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-header></app-header>
-<app-blog-post></app-blog-post>
+<div>
+    <app-category></app-category>
+    <app-category></app-category>
+    <app-category></app-category>
+</div>
