--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,25 +1,21 @@
-<div>
-    <div class="top-bar">
-
-        <!--Home Button-->
-        <div class="menu-button">
-            <button class="main-font home-link-text">SolidBowel 2.0</button>
-        </div>
-
-        <!--Username-->
-        <div class="menu-button">
-            <p class="main-font">User: "placeholder"</p>
-        </div>
-
-        <!--Server of User Profile-->
-        <div class="menu-button">
-            <p class="main-font">Server: "placeholder"</p>
-        </div>
-
-        <!--Log-in/out for User-->
-        <div class="menu-button access-button last-item">
-            <p class="main-font">Log-in/out</p>
-        </div>
-
+<div class="top-bar">
+    <!--Home Button-->
+    <div class="menu-button">
+        <button class="main-font home-link-text">SolidBowel 2.0</button>
     </div>
-</div> 
+
+    <!--Username-->
+    <div class="menu-button">
+        <p class="main-font menu-button">User: "placeholder"</p>
+    </div>
+
+    <!--Server of User Profile-->
+    <div class="menu-button">
+        <p class="main-font menu-button">Server: "placeholder"</p>
+    </div>
+
+    <!--Log-in/out for User-->
+    <div class="last-item menu-button access-button">
+        <p class="menu-button access-button main-font">Log-in/out</p>
+    </div>
+</div>
