--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,4 +1,3 @@
-
 .top-bar{
     height: 5%;
     min-height: 40px;
@@ -6,17 +5,17 @@
     display: flex;
     align-items: center;
     align-content: center;
-    /*border-color: rgba(46, 137, 168,0.5);
-    /*border-radius: 2px;*/
+    border-bottom: 4px solid  rgb(22, 66, 81);
+    flex-wrap: nowrap;
 }
 .last-item{
     margin-left: auto !important;
     padding-right: 10px;
-    /* add: flex position to not show menu buttons (always show last item) */
+    /* TODO: add: flex position to not show menu buttons (always show last item) */
 }
 .menu-button{
     margin-left: 30px;
-
+    background-color: rgb(46, 137, 168);
 }
 .home-link-text{
     font-size: 26px;
