added component to handle RDF matters.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
 <div>
-    <app-category></app-category>
-    <app-category></app-category>
+    <app-new-category></app-new-category>
     <app-category></app-category>
 </div>
