--- a/src/app/new-entry/new-entry.component.scss
+++ b/src/app/new-entry/new-entry.component.scss
@@ -1,9 +1,7 @@
 .container{
     display: flex;
+    margin-right: 15px;
 }
 .element{
     margin-right: 5px;
-}
-.time-option{
-    display: none;
 }
