--- a/src/app/new-entry/new-entry.component.html
+++ b/src/app/new-entry/new-entry.component.html
@@ -1,19 +1,12 @@
 <!-- input-ID variabel machen für ngFor?-->
 <div class="container">
     <div class="element">
-        <input id="new-input" type="text" placeholder="new entry">
+        <p>Options for {{ category }}</p>
     </div>
     <div class="element">
-        <select name="Time" id="new-date-time">
-            <option value="current">current</option>
-            <option value="specified-time">specify own:</option>
-        </select>
-        <div class="time-option">
-            <input type="datetime-local">
-            <!--show date-time menu when specify own is chosen-->
-        </div>
+        <input id="entryText" type="text" placeholder="enter new Entry here:">
     </div>
-    <div class="element">
-        <button (click)="saveMe()">Save!</button>
+    <div>
+        <button id="saveButton" (click)="saveAction()">Save</button>
     </div>
 </div>
