added ngFor - missing link to categories in Container

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <div>
     <app-new-category></app-new-category>
-    <app-category></app-category>
+</div>
+<div id="categoryCountDiv">
+    <app-category id="categoryCount" *ngFor="let thing of things">{{thing}}</app-category>
 </div>
