--- a/src/app/category/category.component.html
+++ b/src/app/category/category.component.html
@@ -1,4 +1,5 @@
 <div class="container">
     <app-new-entry></app-new-entry>
     <app-last-entry></app-last-entry>
+    <button id="refresh" (click)="refreshContent()">refresh Me!</button>
 </div>
